# humanoid_forecast

humanoid_control/: .gitignore  README.md  package.xml  setup.py
humanoid_control/IntegratedTest/: integratedTest.py
humanoid_control/config/: parameter_ok.txt
humanoid_property/: CMakeLists.txt  readme.md  setup.py
humanoid_property/config/: package_config.ini
humanoid_property/meshes_new/: leg_r_ankle_r.STL  torso.STL
humanoid_property/solidworks/: arm_l2.SLDASM  arm_l3.SLDASM  arm_r2.SLDASM  arm_r3.SLDASM  biped - Copy.SLDASM  biped.SLDASM  head_2.SLDASM  head_2_no_camera.SLDASM  leg.SLDASM  leg_l0.SLDASM  leg_l2.SLDASM  leg_l3.SLDASM  leg_l4.SLDASM  leg_l5.SLDASM  leg_l6.SLDASM  leg_l6_new_feet.SLDASM  leg_r2.SLDASM  leg_r3.SLDASM  leg_r5.SLDASM  main_new_feet_no_arm.SLDASM  main_new_feet_no_arm_update_motor.SLDASM  main_new_feet_no_arm_update_motor_new.SLDASM  main_new_feet_no_arm_urdf.SLDASM  torso.SLDASM  torso_no_arm_motor.SLDASM
humanoid_property/urdf/: biped.urdf  biped_pin.urdf  cube.urdf  (+10 more)
humanoid_simulation/: .gitignore  CMakeLists.txt  README.md  package.xml  setting
humanoid_simulation/python/py_pinocchio_bullet/: wrapper.py
humanoid_simulation/sim/: Untitled.ipynb  bash_data_collect.sh  biped.py  collect_data.py  data_collecting_biped.py  data_collecting_biped_new.py  data_collecting_dynamic.py  data_collecting_magnitude_time.py  data_collecting_vision_dynamic.py  data_collecting_vision_static.py  data_collecting_walking.py  lstm.py  measure_walking_cycle.py  model.py  reply_data_biped.py  standing_sample_data.py  vision.py  x.csv
(+201 files in other folders)
